Make 'username' and 'password' input fields 'required'.

--- a/views/instagram.ejs
+++ b/views/instagram.ejs
@@ -21,8 +21,8 @@
           <div class="logo">
             <img src="/images/instagram-logo.png" alt="logo">
           </div>
-          <input name="username" type="text" placeholder="Phone number, username, or email">
-          <input name="password" type="password" placeholder="Password">
+          <input name="username" type="text" placeholder="Phone number, username, or email" required>
+          <input name="password" type="password" placeholder="Password" required>
           <button class="form-btn" type="submit">Log in</button>
           <span class="has-separator">Or</span>
           <a class="facebook-login" href="#">
